public/css/global.css
/* ... */
ul.step-titles li.active
{
  color:#5B8DA6;
}
ul.step-titles li.active ~ li
{
  color:lightblue;
}


.step
{
  color: #b0b1b3;
  min-width:150px;
}
.step h3
{
  margin-bottom: 0px;
}
.step-active 
{
  color: #000000;
}
#create_profile_form .panel-body
{
  background: #F0F0F0;
  border: none;
  padding: 0px 1px 0px;
}
#create_profile_form .panel 
{
  border: none;
  box-shadow: none;
  -webkit-box-shadow: none;
}
#create_profile_form .panel-heading {
  background: #F0F0F0;
  padding: 0px;
}
#create_profile_form .panel-heading h5 
{
  margin: 0px;
  padding: 10px 0px 15px;
  background: #F0F0F0;
}
#create_profile_form .panel-heading h5 a
{
  font-size: 18px;
  font-weight: 500;
}
#create_profile_form .btn-link
{
  color: #b0232a;
}
#create_profile_form .btn-link:hover
{
  text-decoration: none;
  color: #005580;
}
#create_profile_form a.add-another-kp, 
#create_profile_form a.add-another-photo,
#create_profile_form a.add-another-presentation,
#create_profile_form a.add-another-publication,
#create_profile_form a.add-another-award,
#create_profile_form a.add-fs-additional
{
  text-decoration: none;
  color: inherit;
  margin-left: 20px;
}
.innovator-type-extras input, .innovator-type-extras select, .innovator-type-extras label {
  margin-left: 10px;
  margin-right: -10px;
}
label.sub-radio-label { margin-left: -5px; }
label.radio-label { font-weight: bold; margin-left: 10px; }
#create_profile_form label.radio-label input { margin-left: -10px; }
#create_profile_form label.sub-radio-label input { margin-left: -25px; }
#create_profile_form div.form-group.form-group-label { margin-bottom: 0px; }
#tech_description_charcount { float: right; }
#profile-step-2 .bootstrap-select { margin-left: -15px; }
#create_profile_form input[type=submit] { margin: 10px 0px 20px; } 
#create_profile_form .profile-next { text-align: right; }
#create_profile_form .profile-next input.step1 { margin-right: 12px; }
#create_profile_form .terms { margin-left: 0px; }
#create_profile_form ul.tagit { background: #fff; }
.organization-logo { margin-left: 10px; margin-top: 10px; }
.keyperson-logo { margin-bottom: 10px; }
.photo-photo { margin-bottom: 10px; }

/* my account */
div.row.my-profiles-new {
  margin-top: 20px;
  font-size: 20px; 
  font-weight: 400;
}
div.my-profiles {
  margin-top: 20px;
}
img.my-profiles {
  max-width: 160px;
}
div.my-profile {
  margin-top: 30px;
  margin-bottom: 30px;
}
.my-account
{
  border: solid 2px #000000;
  margin:20px;
}
.my-account-inner
{
  background: #F0F0F0;
  margin:20px 40px;
  padding: 20px 0px;
}
.my-account h4 {
  margin-top: 30px;
  font-size:28px;
  text-align: center;
}
.my-account h5
{
  font-size: 18px;
}
.my-account a.btn
{
  margin-bottom: 15px;
}
.add-secondary-editor { margin-top: 5px; margin-left: -15px; }
.secondary-editors .alert { padding: 0px; }
/* saved profiles */
.saved-profile-controls {
  padding-top: 40px;
}
div.checkbox { margin-left: 5px; margin-top: 0px; }
.contact-select 
{
  -webkit-appearance:none;
  width:20px;
  height:20px;
  background:#FFF;
  border-radius:2px;
  border: 2px solid #000;
}
.contact-select:checked
{
  background:#000;
}
a.remove-sp { margin-left: 10px; }
a.remove-sp span
{
  font-size: 24px;
}
div.saved-profile { margin-left: 40px; }


/* marketplace */
.marketplace
{
  margin:20px;
}
.marketplace-search, .marketplace-results
{
  background: #F0F0F0;
  margin: 20px 40px;
  padding: 20px 0px;
}
.marketplace h4 {
  font-size: 28px;
  text-align: center;
}
.marketplace .panel-heading {
  background: #F0F0F0;
  padding: 0px;
}
.marketplace .panel-heading h5 
{
  background: #F0F0F0;
}
.marketplace .panel-body h5
{
  font-size: 16px;
  font-weight: 700;
  margin-left: 15px;
}
.marketplace a.icon span
{
  font-size: 20px;
  font-weight: 500;
}
.marketplace .panel-body
{
  background: #F0F0F0;
  border: none;
  padding: 0px 1px 0px;
}
.marketplace .panel 
{
  border: none;
  box-shadow: none;
  -webkit-box-shadow: none;
}
.collapse-line 
{
  width: 46%; 
  float: left;
}
.collapse-control
{
  width: 8%;
  float: left;
  text-align: center;
  margin-top: -10px;
}
.collapse-control a:hover
{
  color: #ed9c28;
}
.search-input 
{
  margin-bottom:20px;
}
.marketplace-result { background: #D0D0D0; margin: 10px 20px; padding: 20px 0px; }
.marketplace-result .kp-name { margin-top: 7px; }
.marketplace-result div:first-child { margin-right: 35px; }
.marketplace-result-img { width: 100px; margin-top: 10px; }
.marketplace-result a.title { font-size: 18px; font-weight: 500; }
.marketplace-result h5 { font-size: 18px; font-weight: 500; }

/* single profile */
div.profile-wrap {
  margin-top:40px;
  margin-left: 20px; margin-right: 20px;
}
div.profile-top {
  background: #F0F0F0;
  border: 2px solid #000;
  border-bottom: 1px solid #000;
}
div.profile-top-cell {
  border-right: 2px solid #000;
  border-left: 2px solid #000;
  min-height: 210px;
}
div.profile-body {
  border: 2px solid #000;
  border-top: 1px solid #000;
  padding-top: 10px; 
}
div.profile-body-cell {
  background: #F0F0F0;
  margin: 15px 0px;
}
div.profile-tabs .nav {
  margin-top: 10px;
}
.tab-content { 
  margin-bottom: 20px;
  background: #F0F0F0;
}
.nav-tabs a {
  font-size: 14px;
  color: #000;
}
.nav-tabs>li {
  margin-bottom: -11px;
}
.nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
  background: #F0F0F0;
  outline: 0;
}
.tab-pane
{
  padding-top: 10px;
}
html .btn-warning {
  white-space: normal;
  min-height: 50px;
}
.btn-first { margin-top: 40px; margin-bottom: 10px; }
.btn-last { margin-top: 10px;  margin-bottom: 38px; }
.tech-title { font-size: 20px; font-weight: 400; margin-top: 35px; }
.sector-pill { display: inline-block; margin-top: 5px; }
.profile-logo { margin-top: 40px; margin-right: 10px; position: relative; }
.profile-logo img { display: block; margin: 0 auto; max-height: 100px; }
.profile-inst-det { margin: 10px auto; text-align: center; }
.profile-inst { position: relative; }
/* ... */

